load("//toolchains:defs.bzl", "demo", "demo_versioned")

demo(
    name = "demo-1",
    target_compatible_with = select({
	"//toolchains:1": [],
	"//conditions:default": ["@platforms//:incompatible"],
    }),
)

demo(
    name = "demo-2",
    target_compatible_with = select({
	"//toolchains:2": [],
	"//conditions:default": ["@platforms//:incompatible"],
    }),
)

demo(
    name = "demo-all",
)

demo_versioned(
    name = "demo-all-1",
    actual = ":demo-all",
    version = "1.0.0",
)

demo_versioned(
    name = "demo-all-1.1",
    actual = ":demo-all",
    version = "1.1.0",
)

demo_versioned(
    name = "demo-all-2",
    actual = ":demo-all",
    version = "2.0.0",
)
