load(":defs.bzl", "demo_toolchain")

toolchain_type(name = "toolchain_type")

demo_toolchain(
    name = "demo-x86_64-linux-x86_64-linux-1.0.0",
    exec_platform = "x86_64-linux",
    target_platform = "x86_64-linux",
    version = "1.0.0",
)

toolchain(
    name = "x86_64-linux-x86_64-linux-1.0.0",
    exec_compatible_with = [
	"@platforms//cpu:x86_64",
	"@platforms//os:linux",
    ],
    target_compatible_with = [
	"@platforms//cpu:x86_64",
	"@platforms//os:linux",
    ],
    toolchain = ":demo-x86_64-linux-x86_64-linux-1.0.0",
    toolchain_type = ":toolchain_type",
)
