load("@bazel_skylib//lib:selects.bzl", "selects")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(":defs.bzl", "demo_toolchain")

string_flag(
    name = "version",
    values = ["1.0.0", "1.1.0", "2.0.0"],
    build_setting_default = "1.0.0",
)

config_setting(
    name = "1.0.0",
    flag_values = {
        ":version": "1.0.0",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "1.1.0",
    flag_values = {
        ":version": "1.1.0",
    },
    visibility = ["//visibility:public"],
)

selects.config_setting_group(
    name = "1",
    match_any = [
	":1.0.0",
	":1.1.0",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "2.0.0",
    flag_values = {
        ":version": "2.0.0",
    },
    visibility = ["//visibility:public"],
)

selects.config_setting_group(
    name = "2",
    match_any = [
	":2.0.0",
    ],
    visibility = ["//visibility:public"],
)

toolchain_type(name = "toolchain_type")

demo_toolchain(
    name = "demo-x86_64-linux-x86_64-linux-1.0.0",
    exec_platform = "x86_64-linux",
    target_platform = "x86_64-linux",
    version = "1.0.0",
)

toolchain(
    name = "x86_64-linux-x86_64-linux-1.0.0",
    exec_compatible_with = [
	"@platforms//cpu:x86_64",
	"@platforms//os:linux",
    ],
    target_compatible_with = [
	"@platforms//cpu:x86_64",
	"@platforms//os:linux",
    ],
    target_settings = [":1.0.0"],
    toolchain = ":demo-x86_64-linux-x86_64-linux-1.0.0",
    toolchain_type = ":toolchain_type",
)

demo_toolchain(
    name = "demo-x86_64-linux-x86_64-linux-2.0.0",
    exec_platform = "x86_64-linux",
    target_platform = "x86_64-linux",
    version = "2.0.0",
)

toolchain(
    name = "x86_64-linux-x86_64-linux-2.0.0",
    exec_compatible_with = [
	"@platforms//cpu:x86_64",
	"@platforms//os:linux",
    ],
    target_compatible_with = [
	"@platforms//cpu:x86_64",
	"@platforms//os:linux",
    ],
    target_settings = [":2.0.0"],
    toolchain = ":demo-x86_64-linux-x86_64-linux-2.0.0",
    toolchain_type = ":toolchain_type",
)
